# ECAP5-DTESTLIB

./: CMakeLists.txt  README.md
.github/workflows/: simulate-with-verilator.yml
cmake/: ecap5-treq.cmake  verilator-config.cmake
config/: treq.json
config/gtkwave/config/: tb_instr_wb_slave.gtkw
docs/: CMakeLists.txt
docs/src/: conf.py  index.rst  instr_wb_slave.rst
include/: elf.h  riscv.h  testbench.h
src/: instr_wb_slave.sv
tests/: CMakeLists.txt
tests/benches/instr_wb_slave/: tb_instr_wb_slave.cpp  tb_instr_wb_slave.sv
tests/instr_wb_slave/: tb_instr_wb_slave.cpp  tb_instr_wb_slave.sv
